--- a/index.css
+++ b/index.css
@@ -5,14 +5,18 @@
   .login--welcome-back{
       color: black;
   }
+
+  .content-wrapper {
+    text-align: center;
+  }
   
   body {
     background: #f5f5f5;
-      color: #4a4a4a;
+    color: #4a4a4a;
     font-family: helvetica;
-      width: 100%;
+    width: 100%;
     height: 100vh;
-      display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
   }
