--- a/index.css
+++ b/index.css
@@ -2,11 +2,7 @@
     box-sizing: border-box;
   }
 
-  .login--welcome-back{
-      color: black;
-  }
-
-  .content-wrapper {
+  .content-wrapper{
     text-align: center;
   }
   
@@ -14,8 +10,6 @@
     background: #f5f5f5;
     color: #4a4a4a;
     font-family: helvetica;
-    width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,10 +33,10 @@
   }
   
   .self-registration-title {
-      color: #39668E;
-      font-weight: 300;
-      font-size: 2em;
-      margin: 0;
+    color: #39668E;
+    font-weight: 300;
+    font-size: 2em;
+    margin: 0;
     margin-bottom: 5px;
   }  
 
@@ -52,13 +46,13 @@
     display: block;
     font-size: 18px;
     border: none;
-      border-radius: 3px;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
-      color: #4a4a4a;
-      margin: .625em 0 0 0;
-      outline: none;
-      padding: 10px;
-      width: 100%;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+    color: #4a4a4a;
+    margin: .625em 0 0 0;
+    outline: none;
+    padding: 10px;
+    width: 100%;
   }
   
   input[type="submit"] {
@@ -73,13 +67,13 @@
     outline: none;
     padding: 8px 12px;   
   }
-  
-  
-  .return-link {
-    color: #39668E;
-    display: inline-block;
-    font-size: .875em;
-    margin-top: 2em;
+
+  .logo-fiesc {
+    padding: 15px;  
+  }
+
+  .form-forget-password {
     text-decoration: none;
+    color: #2972e0;
   }
   
