--- a/index.css
+++ b/index.css
@@ -1,11 +1,3 @@
-* {
-    box-sizing: border-box;
-  }
-
-  .content-wrapper{
-    text-align: center;
-  }
-  
   body {
     background: #f5f5f5;
     color: #4a4a4a;
@@ -14,34 +6,23 @@
     align-items: center;
     justify-content: center;
   }
+
+  .container-main{
+    text-align: center;
+  }
+
+  .container-logo--img {
+    padding: 15px;  
+  }
   
-  .container {
+  .form-login {
     width: 400px;
     height: auto;
     position: relative;
     text-align: center;
   }
-  
-  .form-login, .form-2fa {
-    height: auto;
-    position: relative;
-    width: 100%;
-  }
-  
-  .form-2fa {
-    display: none;
-  }
-  
-  .self-registration-title {
-    color: #39668E;
-    font-weight: 300;
-    font-size: 2em;
-    margin: 0;
-    margin-bottom: 5px;
-  }  
-
-  
-  input[type="text"] {
+    
+  .form-login--text {
     clear: left;
     display: block;
     font-size: 18px;
@@ -55,7 +36,7 @@
     width: 100%;
   }
   
-  input[type="submit"] {
+  .form-login--submit {
     background: #008000;
     border: 1px solid #000000;
     border-radius: 3px;
@@ -68,11 +49,7 @@
     padding: 8px 12px;   
   }
 
-  .logo-fiesc {
-    padding: 15px;  
-  }
-
-  .form-forget-password {
+  .form-forget--link-color {
     text-decoration: none;
     color: #2972e0;
   }
